--- a/css/detalhes.css
+++ b/css/detalhes.css
@@ -1,7 +1,35 @@
-.detalhes td  {
-  width: 70%;
+
+.container-detalhes {
+  width: 60%;
+  background-color: #fff;
+  margin: 1em auto;
+  padding: 1em;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+  display: flex;
 }
 
-.detalhes img {
+.foto {
+  padding-right: 1em;
+  text-align: left;
   width: 50%;
 }
+
+.foto img {
+  max-width: 300px;
+  max-height: 400px;
+}
+
+.foto h1 {
+  text-align: center;
+}
+
+.text {
+  padding-left: 1em;
+  padding-top: 7em;
+}
+
+
+
+
+
+
