--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,15 @@ body, html {
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
+.main-header {
+  text-align: right;
+}
+
+form {
+  text-align: right;
+}
+
+
 .list {
   text-align: left;
   border-collapse: collapse;
@@ -46,4 +55,10 @@ body, html {
 .list img {
   width: 100%;
 }
+
+.main-footer {
+  text-align: center;
+  padding-bottom: 1em;
+}
+
 
